# pick_place_module

./: CMakeLists.txt  README.md  package.xml
action/: Pick.action  Place.action  TrajOpt.action
config/: pick_place_params.yaml
data/: motion_log_20260422_173136.csv  motion_log_20260422_175657.csv  motion_log_20260422_181116.csv  motion_log_20260427_210208.csv  motion_log_20260429_152419.csv  motion_log_20260429_153428.csv  motion_log_20260429_153728.csv  motion_log_20260429_153950.csv  motion_log_20260429_174144.csv  motion_log_20260429_180034.csv  motion_log_20260429_185229.csv  motion_log_20260429_185503.csv  motion_log_20260430_004024.csv  motion_log_20260430_004930.csv  motion_log_20260430_005844.csv  motion_log_20260430_010404.csv  motion_log_20260430_012632.csv  motion_log_20260430_012935.csv  motion_log_20260430_014223.csv  motion_log_20260430_020933.csv  motion_log_20260430_134747.csv  motion_log_20260430_135441.csv  motion_log_20260430_135850.csv  motion_log_20260430_140309.csv  motion_log_20260430_141954.csv  motion_log_20260430_142048.csv  motion_log_20260430_142904.csv  motion_log_20260430_143254.csv  motion_log_20260430_144808.csv  motion_log_20260430_145444.csv  motion_log_20260430_151350.csv  motion_log_20260430_152918.csv  motion_log_20260430_153454.csv  motion_log_20260430_153704.csv  motion_log_20260430_175334.csv  motion_log_20260430_175528.csv  motion_log_20260430_181321.csv  motion_log_20260430_181824.csv  motion_log_20260430_182013.csv  motion_log_20260430_182214.csv  (+11 more)
launch/: pick_place.launch.py
results/: rrt_only_results.csv  rrt_traj_results.csv  trj_only_results.csv
scripts/: analyze_results.py
src/: ee_path_visualizer_node.cpp  ee_pose_publisher.cpp  goal_relay_node.cpp  motion_logger_node.cpp  pick_place_node.cpp  rrt_path_recorder_node.cpp
