<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pick_place_module</name>
  <version>0.1.0</version>
  <description>
    MoveIt2 기반 Pick-and-Place 모듈.
    pick_goal / place_goal 토픽 수신 → PickPlace action 변환 → RRTConnect 경로 계획 및 실행.
  </description>

  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <!-- 빌드툴 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 빌드 및 실행 의존성 -->
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- 생성된 인터페이스 런타임 의존성 -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 런치 의존성 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
